@@ -1,7 +1,7 @@
 class inputs {
     
     constructor() {
-        console.log('new controls!');
+        console.log('Constructor: New controls!');
 
         // Binding Input Events
         document.addEventListener('mousemove', this.onDocumentMouseMove, false);
@@ -54,10 +54,14 @@ class inputs {
     // KEYBOARD STUFF
 
     onDocumentKeyDown(event) {
-        // console.log(event.keyCode);
+        // console.log('keydown:', event.keyCode);
         if (game.state == 'run' || game.state == 'pause') {
             switch (event.keyCode) {
-                case 80: game.togglePause(); break;
+                case 80: game.togglePause(); break; // p
+                case 87: game.player1.move(0, 0, -tileSize, tileSize); break; // w
+                case 83: game.player1.move(0, 0, tileSize, tileSize); break; // s
+                case 65: game.player1.move(-tileSize, 0, 0, tileSize); break; // a
+                case 68: game.player1.move(tileSize, 0, 0, tileSize); break; // d
             }
         }
     }
