@@ -13,6 +13,7 @@
 
     <script type="text/javascript" src="canvas.js"></script>
     <script type="text/javascript" src="game.js"></script>
+    <script type="text/javascript" src="player.js"></script>
     <script type="text/javascript" src="backend.js"></script>
     <script type="text/javascript" src="sound.js"></script>
     <script type="text/javascript" src="stats.js"></script>
